[PM-2319] Fixing issue where styles can override visibility of overlay icon and list

--- a/apps/browser/src/autofill/content/autofill.css
+++ b/apps/browser/src/autofill/content/autofill.css
@@ -34,10 +34,3 @@ span[data-bwautofill].com-bitwarden-browser-animated-fill {
   animation: bitwardenfill 200ms ease-in-out 0ms 1;
   -webkit-animation: bitwardenfill 200ms ease-in-out 0ms 1;
 }
-
-bitwarden-autofill-overlay-icon,
-bitwarden-autofill-overlay-list {
-  all: initial !important;
-  position: fixed !important;
-  z-index: 2147483647 !important;
-}
